Fix question preview layout on mobile

--- a/http/a/main.css
+++ b/http/a/main.css
@@ -107,7 +107,11 @@ abbr { border-bottom: 1px dashed #222 }
 }
 .question-preview {
 	width: 600px;
+	max-width: 100%;
 	margin-right: 1em;
+}
+@media (max-width: 600px) {
+	.question-preview:nth-of-type(n+3) { display: none }
 }
 .highlight {
 	color: #fff;
